# Ros2-Autonomous-Tractor

./: LICENSE  README.md
GPScontroller/: PropControllerGPS.py  simple_gps_camera_controller.py  simple_gps_controller.py
Luxonis RGB-D/: README.md
Luxonis RGB-D/src/depthai_publisher/: package.xml  setup.cfg  setup.py
Luxonis RGB-D/src/depthai_publisher/depthai_publisher/: depthai_publisher_node.py
SWIFT-PSKI-GPS-Unit/: README.md
SWIFT-PSKI-GPS-Unit/src/tractor_control/: setup.py
SWIFT-PSKI-GPS-Unit/src/tractor_control/tractor_control/: final_teleop.py
SWIFT-PSKI-GPS-Unit/src/tractor_gps_driver/: setup.cfg
arduino/: arduino_motor_control_linear.ino  both_motors_sketch2.ino
tractor_ws/src/depthai_publisher/: README.md
tractor_ws/src/depthai_publisher/depthai_publisher/: depthai_publisher_node.py
tractor_ws/src/serial_cmd_vel_publisher/: package.xml  setup.cfg  setup.py
tractor_ws/src/serial_cmd_vel_publisher/serial_cmd_vel_publisher/: serial_cmd_vel_publisher.py
tractor_ws/src/tractor_control/: package.xml  setup.cfg  setup.py
tractor_ws/src/tractor_control/tractor_control/: final_controller.py  simple_gps_controller.py
tractor_ws/src/tractor_gps_driver/: package.xml  setup.py
tractor_ws/src/tractor_gps_driver/tractor_gps_driver/: gps_driver.py
